--- a/src/plots/sliding_window.ipynb
+++ b/src/plots/sliding_window.ipynb
@@ -378,6 +378,7 @@
    "id": "60a06191-5b00-478f-937a-a6014f03b1ce",
    "metadata": {},
    "source": [
+    "#  Figure 14\n",
     "## 5 sliding windows HellaSwag 5 shot "
    ]
   },
